fix: the align-items property to start to make all the colors visible

--- a/packages/shared/styles/components/molecules/SfColorPicker.scss
+++ b/packages/shared/styles/components/molecules/SfColorPicker.scss
@@ -93,7 +93,7 @@
     }
     &--vertical {
       --color-picker-padding: var(--spacer-base);
-      --color-picker-align-items: center;
+      --color-picker-align-items: start;
       --color-picker-width: auto;
       --color-picker-open-padding: var(--spacer-2xl) 0;
       --color-picker-close-margin: var(--spacer-xs) 0 0 0;
